# MiniSWERouterBench

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  pyproject.toml
miniswerouter/: __init__.py  cli.py
miniswerouter/agent/: __init__.py  agent.py  model.py  prompts.py
miniswerouter/harness/: __init__.py  env.py  run_eval.py  run_instance.py
scripts/: run_router.py
scripts/examples/: env.inc.sh  example_router_a.sh  example_router_b.sh  resume_until_n.sh
